<resources>
    <string name="app_name">DjbabsCalculator</string>
    <string name="action_exit">Exit</string>
    <string name="action_converter">Converter</string>
    <string name="action_scientific">Scientific</string>
    <string name="action_standard">Standard</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">÷</string>
    <string name="multipication">×</string>
    <string name="substraction">-</string>
    <string name="Delete">Del</string>
    <string name="addition">+</string>
    <string name="openbracket">(</string>
    <string name="closebracket">)</string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="title_activity_currency">CurrencyActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="massUnits">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>M</item>
        <item>Cm</item>
        <item>Km</item>
        <item>Mi</item>
        <item>Micro-m</item>
        <item>Nano-m</item>
        <item>Nautical mile</item>
        <item>Mm</item>
    </string-array>


</resources>
