<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/seven"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/eight"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/nine"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>
            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_multiple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:minHeight="80dp"
                    android:text="@string/Delete"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:onClick="multplication"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/four"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_five"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/five"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/six"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:minHeight="80dp"
                    android:text="@string/substraction"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:onClick="substraction"/>

            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">
            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/one"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/two"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/three"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:minHeight="80dp"
                    android:text="@string/addition"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:onClick="addition"/>

            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/point"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="point"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">

                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/zero"
                    android:textColor="#333"
                    android:textSize="25sp"
                    android:onClick="onClick1"/>
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/divide"
                    android:textColor="#333"
                    android:textSize="25sp" />
            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>

            <com.example.djbabs.djbabscalculator.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleAlpha="0.2"
                android:layout_weight="1"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true">
                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:minHeight="80dp"
                    android:text="@string/equals"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:onClick="onClick"/>

            </com.example.djbabs.djbabscalculator.MaterialRippleLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>